<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/likertTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_question_text"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioGroup
                android:id="@+id/likertRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbExcellent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_excellent"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbVeryGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_very_good"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_good"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbFair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_fair"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbPoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_poor"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbNotApplicable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_not_applicable"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>