<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptAreaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro2"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDateRangeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro3"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptRespondents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro4"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptCompletedForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro5"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/rptQuestionSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/sample_questions" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/rptReturnReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:text="@string/return_report" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/rptQuestionDetailBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:text="@string/show_report" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>