<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yesNoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_recommend"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioGroup
                android:id="@+id/yesNoRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_yes"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_no"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</LinearLayout>