<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogCQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro2"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogCDateRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro3"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogCRespondents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro4"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogCCompletedForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_comments"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/rptCommentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
