<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogYNQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro2"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogYNDateRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro3"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogYNRespondents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_intro4"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rptDialogYNCompletedForms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#006400" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLabelYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_yes"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvCountYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvPctYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLabelNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_no"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvCountNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvPctNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLabelYNTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvCountYNTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvPctYNTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="#000000" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>